fix input overlapping by invalid XPath message

--- a/css/xpather.css
+++ b/css/xpather.css
@@ -17,7 +17,7 @@
 	left: 0;
 	height: 50px;
 	width: 100%;
-	padding: 0 208px 0 52px;
+	padding: 0 246px 0 52px;
 	font-family: Helvetica, Arial, Verdana, sans-serif;
 	border-bottom: 5px solid #111;
 	box-sizing: border-box;
